open page step 1

--- a/html/home.html
+++ b/html/home.html
@@ -14,10 +14,23 @@
     <title>Oscar Channel</title>
 </head>
 <body>
-
+<!--Header Section-->
+    <section id="nav-menu" class="nav-menu">
     <main>
-        <h1>Oscar Channel</h1>
+        <header>
+            <div class="container-nav">
+                <img src="" alt="">
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="#">História</a>
+                    <a href="#">Curiosidades</a>
+                    <a href="#">Galeria de imagens</a>
+                    <a href="#">Documentários</a>
+                </nav>
+            </div>
+        </header>
     </main>
-    
+    </section>
+<!--Header end-->    
 </body>
 </html>
