open page final

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <!--Animation.Css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Main Css-->
@@ -20,10 +19,14 @@
     <main>
         <h1>Oscar Channel</h1>
         <div class="s-star">
-        
-            <button class="btn">welcome</button>
+            <img src="/gif/shine-estatue.gif" alt="Estátua do Oscar">
         </div>
-        <h2>Welcome</h2>
+        <div class="box-btn">
+        <a href="/html/home.html">    
+        <button class="btn">Entrar</button>
+        </a>
+        </div>
+        <h2>Academia de Artes e Ciências Cinematográficas</h2>
     </main>
     
 </body>
