--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,7 @@
     <main>
         <header>
             <div class="container-nav">
-                <img src="/gif/shine-estatue.gif" alt="Oscar Channel logo">
+                <img src="/img/logo-oscars-removebg-preview.png" alt="Oscar Channel logo">
                 <nav>
                     <a href="#">Home</a>
                     <a href="#">História</a>
